--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,266 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap");
+.nav-top {
+  box-shadow: 0 0.15rem 0.3rem rgba(0, 0, 0, 0.075) !important;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: "Poppins", sans-serif;
+}
+.nav-link {
+  padding: 0.8rem 1.3rem !important;
+  color: #6c5ce7 !important;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.92rem;
+}
+.btn-main {
+  display: inline-block;
+  margin-top: 1rem;
+  border-radius: 5rem;
+  background: #6c5ce7;
+  padding: 0.3rem;
+  padding-left: 0.7rem;
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+}
+.btn-main:hover {
+  color: #fff !important;
+  background-color: #4b35ee;
+}
+.btn-main i {
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem;
+  font-size: 1.4rem;
+  text-align: center;
+  background: #fff;
+  color: #6c5ce7;
+  border-radius: 50%;
+  margin-left: 1rem;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.v-align {
+  padding-top: 10%;
+}
+.v-align h3,
+span,
+p {
+  text-transform: capitalize;
+}
+.v-align h3 {
+  font-size: 3rem;
+  padding-bottom: 0.5rem;
+}
+.v-align span {
+  font-size: 2rem;
+  color: #6c5ce7;
+  padding: 0.5rem 0;
+  display: block;
+}
+.btn-my {
+  background: #6c5ce7 !important;
+  border: 1px solid #6c5ce7 !important;
+  border-radius: 10px;
+}
+.btn-send {
+  background: #4130c6 !important;
+  border: 1px solid #4130c6 !important;
+  border-radius: 10px;
+  color: #fff !important;
+}
+.btn-my {
+  color: #fff !important;
+}
+.profileimage img {
+  height: 85%;
+  width: 72%;
+  border-radius: 50%;
+}
+.about-heading h3 {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+}
+.about-heading span {
+  color: #6c5ce7;
+  text-transform: uppercase;
+}
+.box {
+  box-shadow: 0 0.5rem 1rem hsl(0 0% 0% / 10%);
+  border-radius: 10px;
+  padding: 20px;
+  transition: 0.9s;
+}
+.box:hover {
+  background-color: #fff;
+  transition: 0.9s;
+}
+.box:hover span {
+  color: red;
+  transition: 0.9s;
+}
+.box:hover h2 {
+  color: #6c5ce7;
+}
+.bg-beautiful {
+  background: rgba(108, 92, 231, 0.1);
+}
+.about-info span {
+  font-size: 1.15rem;
+  color: #000;
+}
+.about-info h4 {
+  font-size: 1.1rem;
+  color: #6c5ce7;
+}
+.personal-heading h5 {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.7rem;
+  color: #6c5ce7;
+}
+.bg-my {
+  background-color: #4130c6;
+}
+.bg-contact {
+  background-color: #6c5ce7;
+}
+.footer p {
+  color: #fff;
+}
+.bg-love {
+  background: rgba(108, 92, 231, 0.1);
+}
+.my-skill h3 {
+  font-size: 2.5rem;
+}
+.my-skill h3 span {
+  color: #6c5ce7;
+}
+.box-icon {
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+}
+.bg-skill {
+  background: rgba(108, 92, 231, 0.1);
+  transition: 0.8s;
+}
+.bg-skill:hover {
+  background-color: #6c5ce7;
+  transition: 0.8s;
+  border-radius: 10px;
+}
+.bg-skill:hover p {
+  color: #fff;
+  transition: 0.5s;
+}
+.font-skill p {
+  font-size: 14px;
+}
+.skill-icon {
+  text-align: center;
+}
+.skill-icon i {
+  font-size: 32px;
+  padding-top: 10px;
+  color: #6c5ce7;
+}
+.about-info span {
+  font-size: 1.2rem;
+}
+.about-info h4 {
+  font-size: 1rem;
+}
+.contact h4 {
+  color: #fff;
+}
+.contact p {
+  color: #fff;
+  font-size: 0.85rem;
+}
+.form-control::placeholder {
+  color: #fff !important;
+}
+.form-control:focus {
+  background-color: #4130c6 !important;
+  border-color: #4130c6 !important;
+  color: #fff !important;
+}
+.form-control {
+  color: #fff !important;
+  background-color: #4130c6 !important;
+  border: 1px solid #4130c6 !important;
+  border-radius: 1rem !important;
+}
+.contact h5 {
+  color: #fff;
+}
+.contact i {
+  color: #fff;
+  font-size: 30px;
+  padding-top: 5px;
+}
+.social ul li {
+  list-style: none;
+}
+.social ul li a {
+  background-color: #4130c6;
+  padding: 10px 15px;
+  border-radius: 50%;
+  margin-left: 10px;
+  transition: 0.8s;
+}
+.social ul li i {
+  font-size: 18px;
+  transition: 0.8s;
+}
+.social ul li a:hover {
+  background-color: #fff;
+  transition: 0.8s;
+}
+.social ul li a:hover i {
+  color: #4130c6 !important;
+  transition: 0.8s;
+}
+.portfolio-img img {
+  border-radius: 15px;
+}
+.portfolio-nav a {
+  border: 1px solid #6c5ce7;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+.portfolio-nav a:hover {
+  background-color: #6c5ce7;
+  color: #fff !important;
+}
+.images {
+  position: relative;
+  width: 100%;
+}
+.image-img {
+  display: block;
+  width: 100%;
+  border-radius: 15px;
+}
+.img-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  opacity: 0;
+  border-radius: 15px;
+  transition: 0.5s all;
+}
+.img-text:hover {
+  opacity: 1;
+}
+.img-text:hover a {
+  color: #fff !important;
 }
